# cactus

./: .gitignore  BUILD_REP  CMakeLists.txt  Makefile  README.md  fetch.sh  fetch_vendors.sh  ols.json
.github/: copilot-instructions.md
cactus/core/ecs/: archetype.odin  component.odin  ecs.odin
cactus/core/strat/: slotmap.odin
cmake/: require_clang.cmake  require_libcxx.cmake
demo/: main.cpp
demo/basic_demo/: main.odin
demo/ecs/: main.cpp
demo/input/: main.cpp
demo/parser/: main.cpp  test.spines
demo/sdl_window/: main.cpp  tri.frag  tri.vert  tri.vert.spv
demo/sdl_window_sdlgpu/: main.cpp
demo/sprite_render/: main.cpp
demo/sprite_render_demo/: main.cpp
mods/glm/: glm.cppm
mods/gtest/: gtest.cppm
mods/spdlog/: spdlog.cppm
modules/eastl/: eastl.cppm
modules/raylib/: raylib.cppm
src/: cactus.cppm  common.cpp  main.cpp  main.odin
src/bundle/: bundle.cpp
src/core/: core.cpp  mod.cppm
src/core/ecs/: archetype.cpp  component.cpp  ecs.cpp  entity.cpp  signature.cpp  views.cpp  world.cpp
src/core/strat/: fixedarr.cpp  slotmap.cpp  strat.cpp
src/data_structure/: freelist_vector.cpp  pool.cpp  slot_map.cpp
src/ecs/: archetype.cpp  common.cpp  component.cpp  ecs.cpp  ecs.odin  signature.cpp  small_world.cpp  world.cpp
src/input/: define.cpp  input.cpp
src/parser/: parser.cpp
src/physics/: physics.cpp
src/render/: render.cpp  sprite.cpp  texture.cpp
src/strat/: slotmap.odin
test/core/ecs/: ecs_test.cpp  world.cpp
test/core/slotmap/: slotmap.cpp
test/ecs/: main.cpp
test/ecs/small_world/: _main.cpp  main.cpp
test/ecs/world/: main.cpp
test/ecs_world/: main.cpp
test/freelist_vector/: main.cpp
test/pool/: main.cpp
test/slot_map/: main.cpp
test/slotmap_test/: main.odin
test/strat_test/: slotmap_test.odin
